<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_gravity="top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:id="@+id/relative_Info"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ageText"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_name"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/a_margin_top"
                android:layout_marginEnd="@dimen/hc_margin_end"
                android:layout_marginRight="@dimen/hc_margin_right"
                android:ellipsize="end"
                android:maxLines="3"
                android:paddingTop="6dp"
                android:text="@string/age"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/HairText"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_name"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/h_margin_top"
                android:layout_marginEnd="@dimen/h_margin_end"
                android:layout_marginRight="@dimen/h_margin_right"
                android:ellipsize="end"
                android:maxLines="3"
                android:paddingTop="6dp"
                android:text="@string/hair"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/age"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_name"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/a_margin_top"
                android:layout_marginEnd="@dimen/a_margin_end"
                android:layout_marginRight="@dimen/a_margin_right"
                android:ellipsize="end"
                android:maxLines="3"
                android:paddingTop="6dp"
                android:text="age"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hairColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_name"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/hc_margin_top"
                android:layout_marginEnd="@dimen/hc_margin_end"
                android:layout_marginRight="@dimen/hc_margin_right"
                android:ellipsize="end"
                android:maxLines="3"
                android:paddingTop="6dp"
                android:text="haircolor"
                android:textSize="12sp" />

        </RelativeLayout>



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linear_layout"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="16dp"/>
</RelativeLayout>